# haskell-interface

./: .gitignore  LICENSE  README.md  haskell-interface.cabal  html-test.sh
module-diff/: Builtin.hs  Console.hs  Format.hs  Html.hs  Main.hs  Paths.hs  Program.hs  ProgramArgs.hs  Render.hs  Style.hs  Task.hs
src/: LoadModuleInterface.hs  LoadPackageInterface.hs
src/Data/: Interface.hs
src/Data/Interface/: Change.hs  GHC.hs  Module.hs  ModuleDiff.hs  Name.hs  Package.hs  Source.hs  Type.hs
src/Data/Interface/Change/: OrdSet.hs  View.hs
src/Data/Interface/GHC/: Package.hs
src/Data/Interface/Module/: Decl.hs  Diff.hs  Entity.hs  Export.hs  Interface.hs
src/Data/Interface/Name/: Map.hs
src/Data/Interface/Type/: Build.hs  Diff.hs  Env.hs  Pretty.hs  Render.hs  Type.hs
test/modules/: LargeSig.hs  README.md  Test.hs  TestChangeAll.hs  TestTypes.hs
test/print-test-module/: Main.hs
