name:                haskell-interface
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           (c) Craig Roche 2015
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    LoadModuleInterface,
    Data.Interface.Module
  -- other-modules:       
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    ghc >=7.10 && <7.11,
    ghc-paths >=0.1 && <0.2,
    transformers >=0.4,
    containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable print-test-module
  build-depends: base, haskell-interface, filepath
  hs-source-dirs: test/print-test-module
  main-is: Main.hs
  default-language:    Haskell2010
