name:                haskell-interface
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           (c) Craig Roche 2015
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    LoadModuleInterface
    Data.Interface
    Data.Interface.Name
    Data.Interface.Name.Map
    Data.Interface.Source
    Data.Interface.Change
    Data.Interface.Change.OrdSet
    Data.Interface.Type
    Data.Interface.Type.Type
    Data.Interface.Type.Diff
    Data.Interface.Type.Env
    Data.Interface.Type.Build
    Data.Interface.Module
    Data.Interface.Module.Decl
    Data.Interface.Module.Export
    Data.Interface.ModuleDiff
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    ghc >=7.10 && <7.11,
    ghc-paths >=0.1 && <0.2,
    transformers >=0.4,
    containers >=0.5 && <0.6,
    bifunctors >=5 && <6,
    profunctors >=5 && <6,
    recursion-schemes >=4.1 && <4.2
  hs-source-dirs:      src
  default-language:    Haskell2010

executable module-diff
  build-depends:
    base,
    haskell-interface,
    transformers,
    containers,
    filepath,
    recursion-schemes,
    ansi-wl-pprint >=0.6 && <0.7,
    optparse-applicative >=0.11 && <0.12
  hs-source-dirs: module-diff
  main-is: Main.hs
  default-language:    Haskell2010
